--- a/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -1,10 +1,10 @@
 <template>
-    <lightning-tabset ...>
+    <lightning-tabset variant="scoped">
       <lightning-tab label="Gallery">
         <div class="slds-scrollable_y">
           <!-- layout horizontally aligned to the center  -->
           <!-- layout allowing multiple rows -->
-          <lightning-layout ...>
+          <lightning-layout horizontal-align="center" multiple-rows>
             <!-- template looping through each boat -->
             <template for:each={boats} for:item="boat">
               <!-- lightning-layout-item for each boat -->
