--- a/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
+++ b/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
@@ -1,12 +1,7 @@
 <template>
     <lightning-layout>
         <lightning-layout-item class="slds-align-middle">
-            <lightning-combobox class="slds-align-middle"
-                label = "All Types"
-                value = {selectedBoatTypeId}
-                onchange = {handleSearchOptionChange}
-                options = {searchOptions}
-            ></lightning-combobox>
+            <lightning-combobox class="slds-align-middle"></lightning-combobox>
         </lightning-layout-item>
     </lightning-layout>
 </template>
