--- a/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -1,27 +1,36 @@
 <template>
-    <lightning-tabset variant="scoped">
-      <lightning-tab label="Gallery">
-        <div class="slds-scrollable_y">
-          <!-- layout horizontally aligned to the center  -->
-          <!-- layout allowing multiple rows -->
-          <lightning-layout horizontal-align="center" multiple-rows>
-            <!-- template looping through each boat -->
-            <template for:each={boats} for:item="boat">
-              <!-- lightning-layout-item for each boat -->
-              <lightning-layout-item key={boat.Id} padding="around-small" size="12" small-device-size="6" medium-device-size="4" large-device-size="3">
-                 <!-- Each BoatTile goes here -->
-                 <c-boat-tile onboatselected={updateSelectedTile} selected-boat-id={selectedBoatId} boat={boat}></c-boat-tile>
-              </lightning-layout-item>
-            </template>
-          </lightning-layout>
-        </div>
-      </lightning-tab>
-      <lightning-tab label="Boat Editor">
-        <!-- Scrollable div and lightning datatable go here -->
-      </lightning-tab>
-       <lightning-tab label="Boats Near Me">
-        <!-- boatsNearMe component goes here -->
-      </lightning-tab>
-    </lightning-tabset>
-  </template>
-  
+  <lightning-tabset variant="scoped">
+    <lightning-tab label="Gallery">
+      <div class="slds-scrollable_y">
+        <!-- layout horizontally aligned to the center  -->
+        <!-- layout allowing multiple rows -->
+        <lightning-layout horizontal-align="center" multiple-rows>
+          <!-- template looping through each boat -->
+          <template for:each={boats} for:item="boat">
+            <!-- lightning-layout-item for each boat -->
+            <lightning-layout-item key={boat.Id} padding="around-small" small-device-size="6" medium-device-size="4" large-device-size="3">
+              <!-- Each BoatTile goes here -->
+              <c-boat-tile onboatselected={updateSelectedTile} selected-boat-id={selectedBoatId} boat={boat}></c-boat-tile>
+            </lightning-layout-item>
+          </template>
+        </lightning-layout>
+      </div>
+    </lightning-tab>
+    <lightning-tab label="Boat Editor">
+      <!-- Scrollable div and lightning datatable go here -->
+      <div class="slds-scrollable_y">
+        <lightning-datatable
+          key-field="Id"
+          data={boats}
+          columns={columns}
+          onsave={handleSave}
+          draft-values={draftValues}
+        ></lightning-datatable>
+      </div>
+    </lightning-tab>
+    <lightning-tab label="Boats Near Me">
+      <!-- boatsNearMe component goes here -->
+      <c-boats-near-me boat-type-id={boatTypeId}></c-boats-near-me>
+    </lightning-tab>
+  </lightning-tabset>
+</template>
