--- a/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -8,7 +8,7 @@
           <!-- template looping through each boat -->
           <template for:each={boats} for:item="boat">
             <!-- lightning-layout-item for each boat -->
-            <lightning-layout-item key={boat.Id} padding="around-small" small-device-size="6" medium-device-size="4" large-device-size="3">
+            <lightning-layout-item key={boat.Id} padding="around-small"  size="12" small-device-size="6" medium-device-size="4" large-device-size="3">
               <!-- Each BoatTile goes here -->
               <c-boat-tile onboatselected={updateSelectedTile} selected-boat-id={selectedBoatId} boat={boat}></c-boat-tile>
             </lightning-layout-item>
