--- a/force-app/main/default/lwc/boatAddReviewForm/boatAddReviewForm.html
+++ b/force-app/main/default/lwc/boatAddReviewForm/boatAddReviewForm.html
@@ -1,10 +1,12 @@
 <template>
     <!-- lightning data service code -->
     <!-- <lightning-record-edit-form> using boatReviewObject -->
+        <lightning-record-edit-form object-api-name={boatReviewObject} onsubmit={handleSubmit} onsuccess={handleSuccess}>
       <lightning-layout multiple-rows vertical-align="start">
         <lightning-layout-item size="8" padding="horizontal-small">
           <div class="slds-form-element">
              <!-- review subject field code using nameField -->
+             <lightning-input-field field-name={nameField}></lightning-input-field>
           </div>
         </lightning-layout-item>
         <lightning-layout-item size="4" padding="horizontal-small">
@@ -17,11 +19,13 @@
         </lightning-layout-item>
         <lightning-layout-item padding="horizontal-small">
              <!-- review comment field code using commentField -->
+             <lightning-input-field field-name={commentField}></lightning-input-field>
         </lightning-layout-item>
       </lightning-layout>
       <div class="slds-align_absolute-center" style="margin-top: 5px">
              <!-- add submit button -->
       </div>
     <!-- </lightning-record-edit-form> -->
+    </lightning-record-edit-form>
   </template>
   
