--- a/force-app/main/default/lwc/boatReviews/boatReviews.html
+++ b/force-app/main/default/lwc/boatReviews/boatReviews.html
@@ -1,11 +1,18 @@
 <template>
-    <!-- div for when there are no reviews available -->
-    <div>No reviews available</div>
-    <!-- div for when there are reviews available -->
+  <!-- div for when there are no reviews available -->
+  <template if:false={reviewsToShow}>
+    <div class="slds-align_absolute-center slds-scrollable_y">No reviews available</div>
+  </template>
+  <!-- div for when there are reviews available -->
+  <template if:true={reviewsToShow}>
     <div>
-    <!-- insert spinner -->
+      <!-- insert spinner -->
+      <template if:true={isLoading}>
+        <lightning-spinner alternative-text="Loading" size="small" variant="brand"></lightning-spinner>
+      </template>
       <ul class="slds-feed__list">
         <!-- start iteration -->
+        <template for:each={boatReviews} for:item="boatReview">
           <li class="slds-feed__item" key={boatReview.Id}>
             <article class="slds-post">
               <header class="slds-post__header slds-media">
@@ -15,8 +22,10 @@
                 <div class="slds-media__body">
                   <div class="slds-grid slds-grid_align-spread slds-has-flexi-truncate">
                     <p>
-                        <!-- display creator’s name -->
-                      <span><!-- display creator’s company name --></span>
+                      <!-- display creator’s name -->
+                      <span>
+                        <!-- display creator’s company name -->
+                      </span>
                     </p>
                   </div>
                   <p class="slds-text-body_small">
@@ -25,14 +34,17 @@
                 </div>
               </header>
               <div class="slds-text-longform">
-                <p class="slds-text-title_caps"><!-- display Name --></p>
+                <p class="slds-text-title_caps">
+                  <!-- display Name -->
+                </p>
                 <!-- display Comment__c -->
               </div>
               <!-- display five star rating on readonly mode -->
             </article>
           </li>
+        </template>
         <!-- end iteration -->
       </ul>
     </div>
   </template>
-  
+</template>
