--- a/force-app/main/default/lwc/boatReviews/boatReviews.html
+++ b/force-app/main/default/lwc/boatReviews/boatReviews.html
@@ -18,13 +18,16 @@
               <header class="slds-post__header slds-media">
                 <div class="slds-media__figure">
                   <!-- display the creator’s picture -->
+                  <lightning-avatar src={boatReview.CreatedBy.SmallBannerPhotoUrl} variant="circle"></lightning-avatar>
                 </div>
                 <div class="slds-media__body">
                   <div class="slds-grid slds-grid_align-spread slds-has-flexi-truncate">
                     <p>
                       <!-- display creator’s name -->
+                      {boatReview.CreatedBy.Name}
                       <span>
                         <!-- display creator’s company name -->
+                        {boatReview.CreatedBy.CompanyName}
                       </span>
                     </p>
                   </div>
