--- a/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -1,6 +1,7 @@
 <template>
   <lightning-tabset variant="scoped">
     <lightning-tab label="Gallery">
+      <template if:true={boats}>
       <div class="slds-scrollable_y">
         <!-- layout horizontally aligned to the center  -->
         <!-- layout allowing multiple rows -->
@@ -10,11 +11,12 @@
             <!-- lightning-layout-item for each boat -->
             <lightning-layout-item key={boat.Id} padding="around-small"  size="12" small-device-size="6" medium-device-size="4" large-device-size="3">
               <!-- Each BoatTile goes here -->
-              <c-boat-tile onboatselected={updateSelectedTile} selected-boat-id={selectedBoatId} boat={boat}></c-boat-tile>
+              <c-boat-tile onboatselect={updateSelectedTile} selected-boat-id={selectedBoatId} boat={boat}></c-boat-tile>
             </lightning-layout-item>
           </template>
         </lightning-layout>
       </div>
+    </template>
     </lightning-tab>
     <lightning-tab label="Boat Editor">
       <!-- Scrollable div and lightning datatable go here -->
@@ -25,6 +27,7 @@
           columns={columns}
           onsave={handleSave}
           draft-values={draftValues}
+          hide-checkbox-column
         ></lightning-datatable>
       </div>
     </lightning-tab>
