--- a/force-app/main/default/lwc/boatTile/boatTile.html
+++ b/force-app/main/default/lwc/boatTile/boatTile.html
@@ -2,7 +2,7 @@
     <div onclick={selectBoat} class={tileClass}>
         <div style={backgroundStyle} class="tile"></div>
         <div class="lower-third">
-            <h1 class="slds-truncate lds-text-heading_medium">{boat.Name}</h1>
+            <h1 class="slds-truncate slds-text-heading_medium">{boat.Name}</h1>
             <h2 class="slds-truncate slds-text-heading_small">{boat.Contact__r.Name}</h2>
             <!-- Boat information goes here -->
             <div class="slds-text-body_small">
